--- a/.github/workflows/readme-bot.yaml
+++ b/.github/workflows/readme-bot.yaml
@@ -1,5 +1,8 @@
 name: readme-bot
 
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
 
@@ -10,23 +13,36 @@ jobs:
     steps:
       - name: Check out this repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.24.0"
 
-      - name: Debug commit
-        run: |
-          echo "GITHUB_SHA=$GITHUB_SHA"
-          git log -1 --oneline
-
       - name: Run README Bot
         run: |
           go run ./cmd/readme-bot \
              -owner koh5963 \
              -repo readme-bot \
-             -number 1
+             -number 1      
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Commit README if changed
+        run: |
+          if git diff --quiet README.md; then
+            echo "README.md unchanged; skip commit."
+            exit 0
+          fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add README.md
+          git commit -m "docs: update README (readme-bot)"
+          git push origin HEAD:${GITHUB_REF_NAME}
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
